Tue Oct  2 18:31:20 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): should override existing class.

Mon Oct  1 19:18:54 2001  Tanaka Akira  <akr@m17n.org>

	* ext/socket/socket.c (unix_addr): getsockname(2) may result len = 0. 

	* ext/socket/socket.c (unix_peeraddr): getpeername(2) may result
	  len = 0.

Sat Sep 29 02:30:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (POP_BLOCK): rb_gc_force_recycle() was called too much.
	  Should not be called if SCOPE_DONT_RECYCLE is set.

Thu Sep 27 09:04:44 2001  Guy Decoux  <ts@moulon.inra.fr>

	* parse.y: allow 'primary[] += arg'

Tue Sep 25 10:42:46 2001  Usaku Nakamura  <usa@ruby-lang.org>

	* win32/win32.c (isInternalCmd): check return value of NtMakeCmdVector
	  (Tietew <tietew@tietew.net>'s patch).

Mon Sep 24 00:55:06 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_substr): should return an instance of
	  receiver's class.

	* string.c (rb_str_succ): ditto.

	* array.c (rb_ary_subseq): ditto.

Sat Sep 22 22:16:08 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_reverse): should return an instance of
	  reciever's class.

	* string.c (rb_str_times): ditto.

	* array.c (rb_ary_times): ditto

	* string.c (str_gsub): ditto.

	* string.c (rb_str_ljust): ditto.

	* string.c (rb_str_rjust): ditto.

	* string.c (rb_str_center): ditto.

Wed Sep 19 17:46:42 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.5 released.

Sat Sep  8 07:13:42 2001  Wakou Aoyama  <wakou@fsinet.or.jp>

	* lib/net/telnet.rb: waitfor(): improvement. thanks to
	  nobu.nakada@nifty.ne.jp

Sat Sep  8 04:34:17 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_thread_restore_context): save current value of
	  lastline and lastmatch in the thread struct for later restore.

	* eval.c (rb_thread_save_context): restore lastline and lastmatch.

Fri Sep  7 11:27:56 2001  akira yamada  <akira@ruby-lang.org>
